# jigsaw_helper

./: .gitignore  README.md
backend/: main.py  matching.py  pyproject.toml  requirements.txt  segmentation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CameraView.tsx  CandidateZoom.tsx  MatchOverlay.tsx  PuzzleSelector.tsx  PuzzleUpload.tsx
frontend/src/hooks/: useCamera.ts  useWebSocket.ts
frontend/src/types/: index.ts
